lens model runs + alex code update + lensing galaxy mcmc run

--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 115,
    "id": "4c7f9485",
    "metadata": {},
    "outputs": [
@@ -1191,13 +1191,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "519.4436 507.5639\n",
       "accpetance rate = 34.55%\n",
-      "531.8273 523.9028\n",
       "accpetance rate = 36.09%\n",
-      "509.7722 526.2637\n",
       "accpetance rate = 36.4%\n",
-      "520.496 531.4829\n",
       "accpetance rate = 36.83%\n"
      ]
     }
@@ -1255,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
    "id": "2719d42a",
    "metadata": {},
    "outputs": [
@@ -1357,7 +1353,7 @@
        "3 -0.03 -0.00  9.22   0.80  520.50  531.48    0.38    0.39     0.13       0.01"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 117,
    "id": "3152bb59",
    "metadata": {},
    "outputs": [],
@@ -1378,7 +1374,7 @@
     "def gaussian(x, y, amp, x0, y0, sigma):\n",
     "    return amp * np.exp(-((x - x0)**2 + (y - y0)**2) / (2 * sigma**2))\n",
     "\n",
-    "mcmc['mag'] = np.nan\n",
+    "mcmc['flux'] = np.nan\n",
     "\n",
     "for i in range(len(mcmc)):\n",
     "    amp = mcmc['I_0'][i]\n",
@@ -1386,19 +1382,15 @@
     "    y0 = mcmc['Y0'][i]\n",
     "    sigma = mcmc['sigma'][i]\n",
     "    integral, error = dblquad(gaussian, -np.inf, np.inf, lambda x: -np.inf, lambda x: np.inf, args=(amp, x0, y0, sigma))\n",
-    "    mcmc['mag'][i] = integral\n",
+    "    mcmc['flux'][i] = integral\n",
     "\n",
-    "mcmc['mag_ratio'] = mcmc['mag'] / mcmc['mag'].max()\n",
-    "mcmc['mag_ratio'] = mcmc['mag_ratio'].round(2)\n",
-    "\n",
-    "# Error propagation for magnification ratio\n",
-    "mcmc['mag_ratio_err'] = mcmc['mag_ratio'] * np.sqrt((mcmc['I_0_err'] / mcmc['I_0'])**2 + (mcmc['sigma_err'] / mcmc['sigma'])**2)\n",
-    "mcmc['mag_ratio_err'] = mcmc['mag_ratio_err'].round(2)\n"
+    "mcmc['flux_ratio'] = mcmc['flux'] / mcmc['flux'].max()\n",
+    "mcmc['flux_ratio'] = mcmc['flux_ratio'].round(2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "id": "1f33a6e0",
    "metadata": {},
    "outputs": [
@@ -1434,9 +1426,7 @@
        "      <th>I_0_err</th>\n",
        "      <th>sigma_err</th>\n",
        "      <th>flux</th>\n",
-       "      <th>mag</th>\n",
-       "      <th>mag_ratio</th>\n",
-       "      <th>mag_ratio_err</th>\n",
+       "      <th>flux_ratio</th>\n",
        "      <th>X_mas</th>\n",
        "      <th>Y_mas</th>\n",
        "    </tr>\n",
@@ -1454,10 +1444,8 @@
        "      <td>1.28</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>10.258513</td>\n",
        "      <td>0.28</td>\n",
-       "      <td>0.01</td>\n",
        "      <td>20.78</td>\n",
        "      <td>20.30</td>\n",
        "    </tr>\n",
@@ -1473,10 +1461,8 @@
        "      <td>0.85</td>\n",
        "      <td>0.10</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>16.206377</td>\n",
        "      <td>0.44</td>\n",
-       "      <td>0.01</td>\n",
        "      <td>21.27</td>\n",
        "      <td>20.96</td>\n",
        "    </tr>\n",
@@ -1492,10 +1478,8 @@
        "      <td>0.86</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.02</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>14.469730</td>\n",
        "      <td>0.39</td>\n",
-       "      <td>0.02</td>\n",
        "      <td>20.39</td>\n",
        "      <td>21.05</td>\n",
        "    </tr>\n",
@@ -1511,10 +1495,8 @@
        "      <td>0.39</td>\n",
        "      <td>0.13</td>\n",
        "      <td>0.01</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>37.075820</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>0.02</td>\n",
        "      <td>20.82</td>\n",
        "      <td>21.26</td>\n",
        "    </tr>\n",
@@ -1529,14 +1511,14 @@
        "2  0.02  0.02  3.69   0.79  509.77  526.26    0.79    0.86     0.12   \n",
        "3 -0.03 -0.00  9.22   0.80  520.50  531.48    0.38    0.39     0.13   \n",
        "\n",
-       "   sigma_err  flux        mag  mag_ratio  mag_ratio_err  X_mas  Y_mas  \n",
-       "0       0.02   NaN  10.258513       0.28           0.01  20.78  20.30  \n",
-       "1       0.01   NaN  16.206377       0.44           0.01  21.27  20.96  \n",
-       "2       0.02   NaN  14.469730       0.39           0.02  20.39  21.05  \n",
-       "3       0.01   NaN  37.075820       1.00           0.02  20.82  21.26  "
+       "   sigma_err       flux  flux_ratio  X_mas  Y_mas  \n",
+       "0       0.02  10.258513        0.28  20.78  20.30  \n",
+       "1       0.01  16.206377        0.44  21.27  20.96  \n",
+       "2       0.02  14.469730        0.39  20.39  21.05  \n",
+       "3       0.01  37.075820        1.00  20.82  21.26  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,64 +1531,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ca0e22c",
-   "metadata": {
-    "vscode": {
-     "languageId": "markdown"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "The units of `X0_err` are in milliarcseconds (mas). This is because the `X0` values were converted from pixels to milliarcseconds using the conversion factor `0.04 * 1000` in the previous cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4aed33",
-   "metadata": {
-    "vscode": {
-     "languageId": "markdown"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "The units of `X` are in pixels. This is because the `X` values were not converted from pixels to milliarcseconds like the `X0` values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "0848c898",
+   "execution_count": 127,
+   "id": "2cf0b567",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    12.98600\n",
-      "1    13.29575\n",
-      "2    12.74425\n",
-      "3    13.01250\n",
-      "Name: X, dtype: float64\n",
-      "0    12.6890\n",
-      "1    13.0975\n",
-      "2    13.1565\n",
-      "3    13.2870\n",
-      "Name: Y, dtype: float64\n"
+      "Filename: Rommulus_withLight_Mock_i2_SNIa_z1_cusp.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU      37   (1039, 1039, 6)   float64   \n"
      ]
     }
    ],
    "source": [
-    "print(mcmc['X'] / 0.04 / 1000)\n",
-    "print(mcmc['Y'] / 0.04 / 1000)"
+    "data = fits.open('Rommulus_withLight_Mock_i2_SNIa_z1_cusp.fits')\n",
+    "data.info()\n",
+    "M = data[0].header['HIERARCH Source Absolute AB Magnitude']\n",
+    "z = data[0].header['Z_SOURCE']\n",
+    "\n",
+    "def flux2mag(M, z, flux):\n",
+    "    PHOTFLAM = data[0].header['PHOTFLAM']\n",
+    "    WL_PIVOT=  data[0].header['WL_PIVOT']\n",
+    "    \n",
+    "    # Zero Point\n",
+    "    f_PHOTZPT = 2.49767E-9 #erg/cm**2/s/AA, filter: SDSS-r\n",
+    "    f0_PHOTZPT = f_PHOTZPT * (1E-3) * WL_PIVOT\n",
+    "    PHOTZPT = (2.5)*np.log10(f0_PHOTZPT)\n",
+    "    \n",
+    "    # Prdicted SNIa apparent magnitude (from luminosity distance relation)\n",
+    "    Dls = (cosmo.luminosity_distance(z)).value*np.power(10,6) \n",
+    "    ms = M + 5*np.log10(Dls/10)\n",
+    "    \n",
+    "    # Apparent magnitude from flux\n",
+    "    flux0 = flux*PHOTFLAM*WL_PIVOT #erg/cm**2/s\n",
+    "    f = flux0*(1E-3) #joules/m**2/s\n",
+    "    m = -(2.5)*np.log10(f) + PHOTZPT\n",
+    "    \n",
+    "    # Magnitude difference to magnification\n",
+    "    m_diff = m-ms\n",
+    "    base = np.power(10, 1/2.5)\n",
+    "    mag = np.power(base,abs(m_diff))\n",
+    "    \n",
+    "    return mag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "2cf0b567",
+   "execution_count": 128,
+   "id": "01dde793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The magnifications are [ 4.332  6.844  6.111 15.657].\n",
+      "The flux ratios are [0.277 0.437 0.39  1.   ].\n",
+      "The magnification ratios are [0.277 0.437 0.39  1.   ].\n"
+     ]
+    }
+   ],
+   "source": [
+    "flux = np.array(mcmc['flux'])\n",
+    "\n",
+    "mag = np.round(flux2mag(M, z, flux),3)\n",
+    "print('The magnifications are '+ str(mag) + '.')\n",
+    "\n",
+    "max_flux = np.max(flux)\n",
+    "flux_ratio = flux/max_flux\n",
+    "print('The flux ratios are '+ str(np.round(flux_ratio,3)) + '.')\n",
+    "\n",
+    "max_mag = np.max(mag)\n",
+    "mag_ratio = mag/max_mag\n",
+    "print('The magnification ratios are '+ str(np.round(mag_ratio,3)) + '.')\n",
+    "\n",
+    "mcmc['mag'] = mag.round(2)\n",
+    "mcmc['mag_ratio'] = mag_ratio.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "d1786404",
    "metadata": {},
    "outputs": [
     {
@@ -1630,76 +1638,126 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>x</th>\n",
-       "      <th>x_err</th>\n",
-       "      <th>y</th>\n",
-       "      <th>y_err</th>\n",
+       "      <th>X0</th>\n",
+       "      <th>Y0</th>\n",
+       "      <th>I_0</th>\n",
+       "      <th>sigma</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>X0_err</th>\n",
+       "      <th>Y0_err</th>\n",
+       "      <th>I_0_err</th>\n",
+       "      <th>sigma_err</th>\n",
        "      <th>flux</th>\n",
-       "      <th>flux_err</th>\n",
-       "      <th>image</th>\n",
+       "      <th>flux_ratio</th>\n",
+       "      <th>X_mas</th>\n",
+       "      <th>Y_mas</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>mag_ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>61.403103</td>\n",
-       "      <td>0.018381</td>\n",
-       "      <td>49.589840</td>\n",
-       "      <td>0.018376</td>\n",
-       "      <td>11.870106</td>\n",
-       "      <td>0.183270</td>\n",
-       "      <td>1</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>519.44</td>\n",
+       "      <td>507.56</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>10.258513</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>20.78</td>\n",
+       "      <td>20.30</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>0.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>73.750355</td>\n",
-       "      <td>0.016142</td>\n",
-       "      <td>66.015834</td>\n",
-       "      <td>0.016327</td>\n",
-       "      <td>16.100805</td>\n",
-       "      <td>0.216334</td>\n",
-       "      <td>2</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>531.83</td>\n",
+       "      <td>523.90</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>16.206377</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>21.27</td>\n",
+       "      <td>20.96</td>\n",
+       "      <td>6.84</td>\n",
+       "      <td>0.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>51.829783</td>\n",
-       "      <td>0.019070</td>\n",
-       "      <td>68.241797</td>\n",
-       "      <td>0.018977</td>\n",
-       "      <td>14.733413</td>\n",
-       "      <td>0.232599</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>3.69</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>509.77</td>\n",
+       "      <td>526.26</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>14.469730</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>20.39</td>\n",
+       "      <td>21.05</td>\n",
+       "      <td>6.11</td>\n",
+       "      <td>0.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>62.520786</td>\n",
-       "      <td>0.008990</td>\n",
-       "      <td>73.452096</td>\n",
-       "      <td>0.008993</td>\n",
-       "      <td>37.469106</td>\n",
-       "      <td>0.283404</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.00</td>\n",
+       "      <td>9.22</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>520.50</td>\n",
+       "      <td>531.48</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>37.075820</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>20.82</td>\n",
+       "      <td>21.26</td>\n",
+       "      <td>15.66</td>\n",
+       "      <td>1.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           x     x_err          y     y_err       flux  flux_err  image\n",
-       "0  61.403103  0.018381  49.589840  0.018376  11.870106  0.183270      1\n",
-       "1  73.750355  0.016142  66.015834  0.016327  16.100805  0.216334      2\n",
-       "2  51.829783  0.019070  68.241797  0.018977  14.733413  0.232599      3\n",
-       "3  62.520786  0.008990  73.452096  0.008993  37.469106  0.283404      4"
+       "     X0    Y0   I_0  sigma       X       Y  X0_err  Y0_err  I_0_err  \\\n",
+       "0 -0.01 -0.01  2.37   0.83  519.44  507.56    1.28    1.28     0.10   \n",
+       "1 -0.02  0.01  3.57   0.85  531.83  523.90    0.84    0.85     0.10   \n",
+       "2  0.02  0.02  3.69   0.79  509.77  526.26    0.79    0.86     0.12   \n",
+       "3 -0.03 -0.00  9.22   0.80  520.50  531.48    0.38    0.39     0.13   \n",
+       "\n",
+       "   sigma_err       flux  flux_ratio  X_mas  Y_mas    mag  mag_ratio  \n",
+       "0       0.02  10.258513        0.28  20.78  20.30   4.33       0.28  \n",
+       "1       0.01  16.206377        0.44  21.27  20.96   6.84       0.44  \n",
+       "2       0.02  14.469730        0.39  20.39  21.05   6.11       0.39  \n",
+       "3       0.01  37.075820        1.00  20.82  21.26  15.66       1.00  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred = pd.read_csv('pred.csv')\n",
-    "pred"
+    "mcmc"
    ]
   }
  ],
