added a final table of values

--- a/Pipeline_imfit-LensImgs.ipynb
+++ b/Pipeline_imfit-LensImgs.ipynb
@@ -871,6 +871,117 @@
    "source": [
     "mcmc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5435d940",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>X_arcsec</th>\n",
+       "      <th>Y_arcsec</th>\n",
+       "      <th>X_err_mac</th>\n",
+       "      <th>Y_err_mac</th>\n",
+       "      <th>flux</th>\n",
+       "      <th>flux_err</th>\n",
+       "      <th>mag</th>\n",
+       "      <th>mag_err</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20.777732</td>\n",
+       "      <td>20.302544</td>\n",
+       "      <td>1.280601</td>\n",
+       "      <td>1.279644</td>\n",
+       "      <td>10.134487</td>\n",
+       "      <td>0.358835</td>\n",
+       "      <td>4.273504</td>\n",
+       "      <td>0.151535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.273075</td>\n",
+       "      <td>20.956118</td>\n",
+       "      <td>0.839348</td>\n",
+       "      <td>0.850456</td>\n",
+       "      <td>16.091878</td>\n",
+       "      <td>0.341583</td>\n",
+       "      <td>6.802721</td>\n",
+       "      <td>0.144249</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.390910</td>\n",
+       "      <td>21.050566</td>\n",
+       "      <td>0.794950</td>\n",
+       "      <td>0.860772</td>\n",
+       "      <td>14.185196</td>\n",
+       "      <td>0.412529</td>\n",
+       "      <td>5.988024</td>\n",
+       "      <td>0.174210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20.819813</td>\n",
+       "      <td>21.259312</td>\n",
+       "      <td>0.380713</td>\n",
+       "      <td>0.394835</td>\n",
+       "      <td>36.674664</td>\n",
+       "      <td>0.369575</td>\n",
+       "      <td>15.384615</td>\n",
+       "      <td>0.156070</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    X_arcsec   Y_arcsec  X_err_mac  Y_err_mac       flux  flux_err        mag  \\\n",
+       "0  20.777732  20.302544   1.280601   1.279644  10.134487  0.358835   4.273504   \n",
+       "1  21.273075  20.956118   0.839348   0.850456  16.091878  0.341583   6.802721   \n",
+       "2  20.390910  21.050566   0.794950   0.860772  14.185196  0.412529   5.988024   \n",
+       "3  20.819813  21.259312   0.380713   0.394835  36.674664  0.369575  15.384615   \n",
+       "\n",
+       "    mag_err  \n",
+       "0  0.151535  \n",
+       "1  0.144249  \n",
+       "2  0.174210  \n",
+       "3  0.156070  "
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_table = mcmc[['X_arcsec', 'Y_arcsec', 'X0_err', 'Y0_err', 'flux', 'flux_err', 'mag', 'mag_err']]\n",
+    "final_table = final_table.rename(columns={'X0_err': 'X_err_mac', 'Y0_err': 'Y_err_mac'})\n",
+    "final_table"
+   ]
   }
  ],
  "metadata": {
