pow law crit curve separator test

--- a/critical_curve_separator.ipynb
+++ b/critical_curve_separator.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "[479 rows x 8 columns]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,16 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x283beaa10>"
+       "<matplotlib.collections.PathCollection at 0x2840bf490>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x283c1ee10>"
+       "<matplotlib.legend.Legend at 0x2840f5390>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 207,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,16 +507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2825fee10>"
+       "<matplotlib.legend.Legend at 0x284157f90>"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     },
