--- a/main.ipynb
+++ b/main.ipynb
@@ -3306,7 +3306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3578,14 +3578,7 @@
       "amoeba:  n =   243  y = 3.429806e+03  tol = 1.814627e-03\n",
       "amoeba:  n =   244  y = 3.429806e+03  tol = 1.778655e-03\n",
       "amoeba:  n =   245  y = 3.429806e+03  tol = 1.547525e-03\n",
-      "amoeba:  n =   246  y = 3.429806e+0"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "3  tol = 1.451267e-03\n",
+      "amoeba:  n =   246  y = 3.429806e+03  tol = 1.451267e-03\n",
       "amoeba:  n =   247  y = 3.429806e+03  tol = 1.324794e-03\n",
       "amoeba:  n =   248  y = 3.429806e+03  tol = 1.080807e-03\n",
       "amoeba:  n =   249  y = 3.429806e+03  tol = 1.077039e-03\n",
@@ -3781,7 +3774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
