--- a/main.ipynb
+++ b/main.ipynb
@@ -3774,7 +3774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3827,7 +3827,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# POW + SHEAR\n",
+    "%run POW+SHEAR/pos_point.py"
+   ]
   }
  ],
  "metadata": {
