--- a/main.ipynb
+++ b/main.ipynb
@@ -10911,6 +10911,38 @@
     "\n",
     "curve_data = critcurve_plot(filename_4, filename_3, pos_output=obs_data, num_images=num_images)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# SIE + SHEAR + FIXED\n",
+    "%run POW+SHEAR+FIX/pos_point.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SIE + SHEAR + FIXED\n",
+    "%run POW+SHEAR+FIX/pos_flux_point.py"
+   ]
   }
  ],
  "metadata": {
