--- a/mass_profile.ipynb
+++ b/mass_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " 'glafic.quit()']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,13 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
       "1\n"
      ]
     }
@@ -96,46 +97,40 @@
     "# Extract the line containing 'glafic.startup_setnum('\n",
     "startup_setnum_line = next(line for line in py if 'glafic.startup_setnum(' in line)\n",
     "\n",
+    "set_point_line = next(line for line in py if 'glafic.set_point(' in line)\n",
+    "\n",
     "# Extract the first number inside the parentheses\n",
     "extracted_value = int(re.search(r'glafic\\.startup_setnum\\((\\d+)', startup_setnum_line).group(1))\n",
     "\n",
-    "print(extracted_value)"
+    "print(extracted_value)\n",
+    "\n",
+    "set_point = int(re.search(r'glafic\\.set_point\\((\\d+)', set_point_line).group(1))\n",
+    "\n",
+    "print(set_point)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lens   sie     0.2613  1.580325e+02  2.080960e+01  2.075892e+01  1.289116e-01  1.755657e+02  0.000000e+00  0.000000e+00 \n",
+      "lens   sie     0.2613  1.580350e+02  2.080960e+01  2.075891e+01  1.287589e-01 -4.437098e+00  0.000000e+00  0.000000e+00 \n",
+      "\n",
+      "point  1.0000  2.081270e+01  2.078004e+01 \n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.2613,\n",
-       " 1.580325,\n",
-       " 2.0,\n",
-       " 2.08096,\n",
-       " 1.0,\n",
-       " 2.075892,\n",
-       " 1.0,\n",
-       " 1.289116,\n",
-       " 1.0,\n",
-       " 1.755657,\n",
-       " 2.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0]"
+       "['2.081270e+01', '2.078004e+01']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,37 +138,53 @@
    "source": [
     "# Model Values \n",
     "# Find the line containing 'lens   sie' in opt_result\n",
-    "lens_sie_line = next(line for line in opt_result if 'lens   sie' in line)\n",
+    "lens_sie_line = next(line for line in reversed(opt_result) if 'lens   sie' in line)\n",
     "\n",
     "print(lens_sie_line)\n",
     "\n",
     "# Extract the values from the line\n",
-    "lens_sie_values = re.findall(r'[-+]?\\d*\\.\\d+|\\d+', lens_sie_line)\n",
-    "lens_sie_values = [float(i) for i in lens_sie_values]\n",
-    "lens_sie_values"
+    "lens_sie_values = lens_sie_line.split()[2:]\n",
+    "lens_sie_values = [str(value) for value in lens_sie_values]\n",
+    "lens_sie_values\n",
+    "\n",
+    "# Find the line containing 'glafic.set_point' in opt_result\n",
+    "set_point_line = next(line for line in reversed(opt_result) if 'point' in line)\n",
+    "\n",
+    "print(set_point_line)\n",
+    "\n",
+    "# Extract the values from the line\n",
+    "set_point_values = set_point_line.split()[2:]\n",
+    "set_point_values = [str(value) for value in set_point_values]\n",
+    "set_point_values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "14"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found glafic.set_lens\n",
+      "Found glafic.set_point\n"
+     ]
     }
    ],
    "source": [
     "# Write Glafic file\n",
-    "glafic_file = open('kappa_glafic.py', 'w')\n",
-    "glafic_file.write('import glafic' '\\n')\n",
-    "glafic_file.write('glafic.init(0.3, 0.7, -1.0, 0.7, '', 20.0, 20.0, 21.56, 21.56, 0.01, 0.01, 1, verb = 0)' '\\n')"
+    "with open('kappa_glafic.py', 'w') as glafic_file:\n",
+    "    for line in py:\n",
+    "        if 'glafic.set_lens(' in line:\n",
+    "            print('Found glafic.set_lens')\n",
+    "            # Replace the line with updated lens values\n",
+    "            line = f\"glafic.set_lens(1, 'sie', {lens_sie_values[0]}, {lens_sie_values[1]}, {lens_sie_values[2]}, {lens_sie_values[3]}, {lens_sie_values[4]}, {lens_sie_values[5]}, {lens_sie_values[6]}, {lens_sie_values[7]})\\n\"\n",
+    "        elif 'glafic.set_point(' in line:\n",
+    "            print('Found glafic.set_point')\n",
+    "            # Replace the line with updated point values\n",
+    "            line = f\"glafic.set_point(1, 1.000, {set_point_values[0]}, {set_point_values[1]})\\n\"\n",
+    "        glafic_file.write(line)\n"
    ]
   }
  ],
