--- a/mass_profile.ipynb
+++ b/mass_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " 'glafic.quit()']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "['2.081270e+01', '2.078004e+01']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -173,18 +173,24 @@
     }
    ],
    "source": [
-    "# Write Glafic file\n",
+    "# Read the existing file contents\n",
+    "with open('kappa_glafic.py', 'r') as f:\n",
+    "    py = f.readlines()\n",
+    "\n",
+    "# Update values and write back\n",
     "with open('kappa_glafic.py', 'w') as glafic_file:\n",
     "    for line in py:\n",
     "        if 'glafic.set_lens(' in line:\n",
     "            print('Found glafic.set_lens')\n",
-    "            # Replace the line with updated lens values\n",
     "            line = f\"glafic.set_lens(1, 'sie', {lens_sie_values[0]}, {lens_sie_values[1]}, {lens_sie_values[2]}, {lens_sie_values[3]}, {lens_sie_values[4]}, {lens_sie_values[5]}, {lens_sie_values[6]}, {lens_sie_values[7]})\\n\"\n",
     "        elif 'glafic.set_point(' in line:\n",
     "            print('Found glafic.set_point')\n",
-    "            # Replace the line with updated point values\n",
-    "            line = f\"glafic.set_point(1, 1.000, {set_point_values[0]}, {set_point_values[1]})\\n\"\n",
-    "        glafic_file.write(line)\n"
+    "            # Ensure values are up to date\n",
+    "            if set_point_values is not None and len(set_point_values) == 2:\n",
+    "                line = f\"glafic.set_point(1, 1.000, {set_point_values[0]}, {set_point_values[1]})\\n\"\n",
+    "            else:\n",
+    "                print(\"set_point_values is not set correctly.\")\n",
+    "        glafic_file.write(line)"
    ]
   }
  ],
