param extractor update

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "83407375",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "7017aa3e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "15516469",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,26 +87,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "6bfa83a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last 'optimize' line found at index: 15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['run 2: 24 lens models calculated\\n',\n",
+       " 'chi^2 = 3.593754e+03  [N_data(extend): 0]\\n',\n",
+       " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.593754e+03 1.896385e+02 3.404115e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' lens prior : 0.000000e+00\\n',\n",
+       " ' map prior  : 0.000000e+00\\n',\n",
+       " '\\n',\n",
+       " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
+       " '\\n',\n",
+       " 'lens   sie     0.2613  1.579661e+02  2.080973e+01  2.075958e+01  1.275745e-01 -4.421324e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'point  1.0000  2.081279e+01  2.078042e+01 \\n',\n",
+       " '------------------------------------------\\n']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find last line with 'lens' in it\n",
-    "last_lens_line = None\n",
-    "for line in reversed(opt_result):\n",
-    "    if 'lens' in line:\n",
-    "        last_lens_line = line\n",
+    "# Find the last line with 'optimize' in it\n",
+    "last_optimize_index = None\n",
+    "for idx in range(len(opt_result) - 1, -1, -1):\n",
+    "    if 'optimize' in opt_result[idx]:\n",
+    "        last_optimize_index = idx\n",
+    "        last_optimize_line = opt_result[idx]\n",
     "        break\n",
-    "if last_lens_line is None:\n",
-    "    raise ValueError(\"No line containing 'lens' found in the file.\")\n",
+    "if last_optimize_index is None:\n",
+    "    raise ValueError(\"No line with 'optimize' found in the file.\")\n",
     "\n",
-    "# Extract the lens name\n",
-    "lens_name = re.search(r'lens\\s+(\\S+)', last_lens_line).group(1)\n",
+    "print(f\"Last 'optimize' line found at index: {last_optimize_index}\")\n",
     "\n",
-    "# Extract the parameters from the last line\n",
-    "params = re.findall(r'(\\S+)\\s+(\\S+)', last_lens_line)\n",
-    "\n"
+    "# Extract everything after the last 'optimize' line\n",
+    "opt_result = opt_result[last_optimize_index + 1:]\n",
+    "\n",
+    "opt_result\n"
    ]
   },
   {
