param extractor update

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -141,6 +141,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "6cf21370",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of 'lens' lines: 1\n",
+      "['lens', 'sie', '0.2613', '1.579661e+02', '2.080973e+01', '2.075958e+01', '1.275745e-01', '-4.421324e+00', '0.000000e+00', '0.000000e+00']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of lines that start with 'lens'\n",
+    "lens_count = sum(1 for line in opt_result if line.startswith('lens'))\n",
+    "print(f\"Number of 'lens' lines: {lens_count}\")\n",
+    "\n",
+    "# Initialize a dictionary to hold the lens parameters\n",
+    "lens_params_dict = {}\n",
+    "\n",
+    "# Extract the lens parameters\n",
+    "lens_params = []\n",
+    "for line in opt_result:\n",
+    "    if line.startswith('lens'):\n",
+    "        # Extract the line and split it into parts\n",
+    "        parts = re.split(r'\\s+', line.strip())\n",
+    "        print(parts)\n",
+    "        # Extract the lens name and parameters\n",
+    "        lens_name = parts[1]\n",
+    "        params = [float(x) for x in parts[2:]]\n",
+    "\n",
+    "        # Store the parameters in the dictionary\n",
+    "        lens_params_dict[lens_name] = params\n",
+    "        lens_params.append((lens_name, params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "12286465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sie': [0.2613, 157.9661, 20.80973, 20.75958, 0.1275745, -4.421324, 0.0, 0.0]}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lens_params_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b6a293c8",
    "metadata": {},
