--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "id": "6cf21370",
    "metadata": {},
    "outputs": [
@@ -152,6 +152,16 @@
       "Number of 'lens' lines: 1\n",
       "['lens', 'sie', '0.2613', '1.579661e+02', '2.080973e+01', '2.075958e+01', '1.275745e-01', '-4.421324e+00', '0.000000e+00', '0.000000e+00']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'sie': [0.2613, 157.9661, 20.80973, 20.75958, 0.1275745, -4.421324, 0.0, 0.0]}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -175,28 +185,47 @@
     "\n",
     "        # Store the parameters in the dictionary\n",
     "        lens_params_dict[lens_name] = params\n",
-    "        lens_params.append((lens_name, params))"
+    "        lens_params.append((lens_name, params))\n",
+    "\n",
+    "lens_params_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "12286465",
+   "execution_count": 49,
+   "id": "a1d49520",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'sie': [0.2613, 157.9661, 20.80973, 20.75958, 0.1275745, -4.421324, 0.0, 0.0]}"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lens_params_dict"
+    "# Define the lens corresponding parameters\n",
+    "# POW\n",
+    "pow_params = {'$z_{s,fid}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{Ein}$', 'γ (PWI)'}\n",
+    "\n",
+    "# SIE\n",
+    "sie_params = {'σ', 'x', 'y', 'e', '$θ_{e}$', '$r_{core}$', 'NaN'}\n",
+    "\n",
+    "# NFW\n",
+    "nfw_params = {'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', 'NaN'}\n",
+    "\n",
+    "# EIN\n",
+    "ein_params = {'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', '$α_{e}$'}\n",
+    "\n",
+    "# SHEAR \n",
+    "shear_params = {'$z_{s,fid}$', 'x', 'y', 'γ', '$θ_{γ}$', 'NaN', 'κ'}\n",
+    "\n",
+    "# Sersic\n",
+    "sersic_params = {'$M_{tot}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{e}$', '$n$'}\n",
+    "\n",
+    "model_list = ['POW', 'SIE', 'NFW', 'EIN', 'SHEAR', 'Sersic']\n",
+    "model_params = {\n",
+    "    'POW': pow_params,\n",
+    "    'SIE': sie_params,\n",
+    "    'NFW': nfw_params,\n",
+    "    'EIN': ein_params,\n",
+    "    'SHEAR': shear_params,\n",
+    "    'Sersic': sersic_params\n",
+    "}\n",
+    "\n"
    ]
   },
   {
