--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "7017aa3e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model Opening\n",
-    "model_path = 'SIE'\n",
-    "model_ver = 'SIE_POS+FLUX'\n",
+    "model_path = 'SIE+SHEAR'\n",
+    "model_ver = 'SIE_POS+FLUX_SHEAR'\n",
     "\n",
     "if 'POS+FLUX' in model_ver:\n",
     "    constraint = 'pos_flux'\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "15516469",
    "metadata": {},
    "outputs": [
@@ -43,36 +43,68 @@
      "data": {
       "text/plain": [
        "['------------------------------------------\\n',\n",
-       " 'optimize ndim=7\\n',\n",
-       " 'run 1: 116 lens models calculated\\n',\n",
-       " 'chi^2 = 3.593754e+03  [N_data(extend): 0]\\n',\n",
+       " 'optimize ndim=12\\n',\n",
+       " 'run 1: 380 lens models calculated\\n',\n",
+       " 'chi^2 = 3.412909e+03  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 3.593754e+03 1.896385e+02 3.404115e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.412909e+03 3.702283e+01 3.375886e+03 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   sie     0.2613  1.579661e+02  2.080973e+01  2.075958e+01  1.275745e-01 -4.421324e+00  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.081279e+01  2.078042e+01 \\n',\n",
+       " 'lens   sie     0.2613  1.278207e+02  2.081052e+01  2.074972e+01  2.320166e-01  2.509131e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'lens   pert    0.2613  1.000000e+00  2.110309e+01  2.073726e+01  2.080415e-02  1.065928e+02  0.000000e+00  3.482196e-01 \\n',\n",
+       " 'point  1.0000  2.091013e+01  2.075994e+01 \\n',\n",
        " '------------------------------------------\\n',\n",
        " '------------------------------------------\\n',\n",
-       " 'optimize ndim=7\\n',\n",
-       " 'run 2: 24 lens models calculated\\n',\n",
-       " 'chi^2 = 3.593754e+03  [N_data(extend): 0]\\n',\n",
+       " 'optimize ndim=12\\n',\n",
+       " 'run 2: 242 lens models calculated\\n',\n",
+       " 'chi^2 = 3.368986e+03  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 3.593754e+03 1.896385e+02 3.404115e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.368986e+03 3.345571e+00 3.365640e+03 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   sie     0.2613  1.579661e+02  2.080973e+01  2.075958e+01  1.275745e-01 -4.421324e+00  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.081279e+01  2.078042e+01 \\n',\n",
+       " 'lens   sie     0.2613  1.272891e+02  2.081108e+01  2.074418e+01  2.924119e-01  3.557118e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'lens   pert    0.2613  1.000000e+00  2.111142e+01  2.069488e+01  2.950461e-02  1.079131e+02  0.000000e+00  3.547976e-01 \\n',\n",
+       " 'point  1.0000  2.091463e+01  2.074286e+01 \\n',\n",
+       " '------------------------------------------\\n',\n",
+       " '------------------------------------------\\n',\n",
+       " 'optimize ndim=12\\n',\n",
+       " 'run 3: 41 lens models calculated\\n',\n",
+       " 'chi^2 = 3.368639e+03  [N_data(extend): 0]\\n',\n",
+       " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.368639e+03 2.600966e+00 3.366038e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' lens prior : 0.000000e+00\\n',\n",
+       " ' map prior  : 0.000000e+00\\n',\n",
+       " '\\n',\n",
+       " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
+       " '\\n',\n",
+       " 'lens   sie     0.2613  1.272919e+02  2.081111e+01  2.074410e+01  2.921271e-01  3.562585e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'lens   pert    0.2613  1.000000e+00  2.111176e+01  2.069523e+01  2.955267e-02  1.079406e+02  0.000000e+00  3.548954e-01 \\n',\n",
+       " 'point  1.0000  2.091481e+01  2.074288e+01 \\n',\n",
+       " '------------------------------------------\\n',\n",
+       " '------------------------------------------\\n',\n",
+       " 'optimize ndim=12\\n',\n",
+       " 'run 4: 37 lens models calculated\\n',\n",
+       " 'chi^2 = 3.368559e+03  [N_data(extend): 0]\\n',\n",
+       " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.368559e+03 2.511238e+00 3.366048e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' lens prior : 0.000000e+00\\n',\n",
+       " ' map prior  : 0.000000e+00\\n',\n",
+       " '\\n',\n",
+       " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
+       " '\\n',\n",
+       " 'lens   sie     0.2613  1.273078e+02  2.081102e+01  2.074403e+01  2.920926e-01  3.564185e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'lens   pert    0.2613  1.000000e+00  2.111219e+01  2.069566e+01  2.954578e-02  1.079066e+02  0.000000e+00  3.547413e-01 \\n',\n",
+       " 'point  1.0000  2.091481e+01  2.074300e+01 \\n',\n",
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "6bfa83a7",
    "metadata": {},
    "outputs": [
@@ -95,27 +127,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last 'optimize' line found at index: 15\n"
+      "Last 'optimize' line found at index: 46\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['run 2: 24 lens models calculated\\n',\n",
-       " 'chi^2 = 3.593754e+03  [N_data(extend): 0]\\n',\n",
+       "['run 4: 37 lens models calculated\\n',\n",
+       " 'chi^2 = 3.368559e+03  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 3.593754e+03 1.896385e+02 3.404115e+03 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 3.368559e+03 2.511238e+00 3.366048e+03 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   sie     0.2613  1.579661e+02  2.080973e+01  2.075958e+01  1.275745e-01 -4.421324e+00  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.081279e+01  2.078042e+01 \\n',\n",
+       " 'lens   sie     0.2613  1.273078e+02  2.081102e+01  2.074403e+01  2.920926e-01  3.564185e+00  0.000000e+00  0.000000e+00 \\n',\n",
+       " 'lens   pert    0.2613  1.000000e+00  2.111219e+01  2.069566e+01  2.954578e-02  1.079066e+02  0.000000e+00  3.547413e-01 \\n',\n",
+       " 'point  1.0000  2.091481e+01  2.074300e+01 \\n',\n",
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "id": "6cf21370",
    "metadata": {},
    "outputs": [
@@ -149,17 +182,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 'lens' lines: 1\n",
-      "['lens', 'sie', '0.2613', '1.579661e+02', '2.080973e+01', '2.075958e+01', '1.275745e-01', '-4.421324e+00', '0.000000e+00', '0.000000e+00']\n"
+      "Number of 'lens' lines: 2\n",
+      "['lens', 'sie', '0.2613', '1.273078e+02', '2.081102e+01', '2.074403e+01', '2.920926e-01', '3.564185e+00', '0.000000e+00', '0.000000e+00']\n",
+      "['lens', 'pert', '0.2613', '1.000000e+00', '2.111219e+01', '2.069566e+01', '2.954578e-02', '1.079066e+02', '0.000000e+00', '3.547413e-01']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'sie': [0.2613, 157.9661, 20.80973, 20.75958, 0.1275745, -4.421324, 0.0, 0.0]}"
+       "{'sie': [127.3078, 20.81102, 20.74403, 0.2920926, 3.564185, 0.0, 0.0],\n",
+       " 'pert': [1.0, 21.11219, 20.69566, 0.02954578, 107.9066, 0.0, 0.3547413]}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,45 +222,238 @@
     "        lens_params_dict[lens_name] = params\n",
     "        lens_params.append((lens_name, params))\n",
     "\n",
+    "# Remove the first lens parameter\n",
+    "if lens_params:\n",
+    "    for i in range(len(lens_params)):\n",
+    "        lens_name, params = lens_params[i]\n",
+    "        lens_params_dict[lens_name] = params[1:]\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    \n",
     "lens_params_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "id": "a1d49520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the lens corresponding parameters\n",
+    "# Define the lens corresponding parameters (order preserved)\n",
     "# POW\n",
-    "pow_params = {'$z_{s,fid}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{Ein}$', 'γ (PWI)'}\n",
+    "pow_params = ['$z_{s,fid}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{Ein}$', 'γ (PWI)']\n",
     "\n",
     "# SIE\n",
-    "sie_params = {'σ', 'x', 'y', 'e', '$θ_{e}$', '$r_{core}$', 'NaN'}\n",
+    "sie_params = ['σ', 'x', 'y', 'e', '$θ_{e}$', '$r_{core}$', 'NaN']\n",
     "\n",
     "# NFW\n",
-    "nfw_params = {'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', 'NaN'}\n",
+    "nfw_params = ['M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', 'NaN']\n",
     "\n",
     "# EIN\n",
-    "ein_params = {'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', '$α_{e}$'}\n",
+    "ein_params = ['M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', '$α_{e}$']\n",
     "\n",
     "# SHEAR \n",
-    "shear_params = {'$z_{s,fid}$', 'x', 'y', 'γ', '$θ_{γ}$', 'NaN', 'κ'}\n",
+    "shear_params = ['$z_{s,fid}$', 'x', 'y', 'γ', '$θ_{γ}$', 'NaN', 'κ']\n",
     "\n",
     "# Sersic\n",
-    "sersic_params = {'$M_{tot}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{e}$', '$n$'}\n",
+    "sersic_params = ['$M_{tot}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{e}$', '$n$']\n",
     "\n",
-    "model_list = ['POW', 'SIE', 'NFW', 'EIN', 'SHEAR', 'Sersic']\n",
+    "model_list = ['POW', 'SIE', 'NFW', 'EIN', 'PERT', 'SERS']\n",
     "model_params = {\n",
     "    'POW': pow_params,\n",
     "    'SIE': sie_params,\n",
     "    'NFW': nfw_params,\n",
     "    'EIN': ein_params,\n",
-    "    'SHEAR': shear_params,\n",
-    "    'Sersic': sersic_params\n",
-    "}\n",
-    "\n"
+    "    'PERT': shear_params,\n",
+    "    'SERS': sersic_params\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "1780fa3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use generic column names: param1, param2, ...\n",
+    "df = pd.DataFrame()\n",
+    "rows = []\n",
+    "max_param_len = 0\n",
+    "\n",
+    "for lens_name, params in lens_params_dict.items():\n",
+    "    row = {'Lens Name': lens_name}\n",
+    "    for i, val in enumerate(params):\n",
+    "        row[f'param{i+1}'] = val\n",
+    "    rows.append(row)\n",
+    "    if len(params) > max_param_len:\n",
+    "        max_param_len = len(params)\n",
+    "\n",
+    "columns = ['Lens Name'] + [f'param{i+1}' for i in range(max_param_len)]\n",
+    "df = pd.DataFrame(rows, columns=columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "bd48c3f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "param1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param4",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param5",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param6",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param7",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "16a51b0e-a56c-4b1e-82b7-c801deebc621",
+       "rows": [
+        [
+         "0",
+         "sie",
+         "127.3078",
+         "20.81102",
+         "20.74403",
+         "0.2920926",
+         "3.564185",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "pert",
+         "1.0",
+         "21.11219",
+         "20.69566",
+         "0.02954578",
+         "107.9066",
+         "0.0",
+         "0.3547413"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 2
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>param1</th>\n",
+       "      <th>param2</th>\n",
+       "      <th>param3</th>\n",
+       "      <th>param4</th>\n",
+       "      <th>param5</th>\n",
+       "      <th>param6</th>\n",
+       "      <th>param7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>127.3078</td>\n",
+       "      <td>20.81102</td>\n",
+       "      <td>20.74403</td>\n",
+       "      <td>0.292093</td>\n",
+       "      <td>3.564185</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pert</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>21.11219</td>\n",
+       "      <td>20.69566</td>\n",
+       "      <td>0.029546</td>\n",
+       "      <td>107.906600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.354741</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Lens Name    param1    param2    param3    param4      param5  param6  \\\n",
+       "0       sie  127.3078  20.81102  20.74403  0.292093    3.564185     0.0   \n",
+       "1      pert    1.0000  21.11219  20.69566  0.029546  107.906600     0.0   \n",
+       "\n",
+       "     param7  \n",
+       "0  0.000000  \n",
+       "1  0.354741  "
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
