python file processing

--- a/param_extractor.ipynb
+++ b/param_extractor.ipynb
@@ -458,15 +458,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "b6a293c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#!/usr/bin/env python\\n',\n",
+       " 'import glafic\\n',\n",
+       " '\\n',\n",
+       " \"glafic.init(0.3, 0.7, -1.0, 0.7, 'SIE+SHEAR/SIE_POS+FLUX_SHEAR', 20.0, 20.0, 21.56, 21.56, 0.01, 0.01, 1, verb = 0)\\n\",\n",
+       " '\\n',\n",
+       " \"glafic.set_secondary('chi2_splane 0', verb = 0)\\n\",\n",
+       " \"glafic.set_secondary('chi2_checknimg 0', verb = 0)\\n\",\n",
+       " \"glafic.set_secondary('chi2_restart   -1', verb = 0)\\n\",\n",
+       " \"glafic.set_secondary('chi2_usemag    1', verb = 0)\\n\",\n",
+       " \"glafic.set_secondary('hvary          0', verb = 0)\\n\",\n",
+       " \"glafic.set_secondary('ran_seed -122000', verb = 0)\\n\",\n",
+       " '\\n',\n",
+       " 'glafic.startup_setnum(2, 0, 1)\\n',\n",
+       " \"glafic.set_lens(1, 'sie', 0.261343256161012, 1.30e+02, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0)\\n\",\n",
+       " \"glafic.set_lens(2, 'pert', 0.261343256161012, 1.0, 20.89, 20.64, 0.1, 140.0, 0.0, 0.3)\\n\",\n",
+       " 'glafic.set_point(1, 1.0, 20.78, 20.78)\\n',\n",
+       " '\\n',\n",
+       " 'glafic.setopt_lens(1, 0, 1, 1, 1, 1, 1, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(2, 0, 0, 1, 1, 1, 1, 0, 1)\\n',\n",
+       " 'glafic.setopt_point(1, 0, 1, 1)\\n',\n",
+       " '\\n',\n",
+       " '# model_init needs to be done again whenever model parameters are changed\\n',\n",
+       " 'glafic.model_init(verb = 0)\\n',\n",
+       " '\\n',\n",
+       " \"glafic.readobs_point('/Users/ainsleylewis/Documents/Astronomy/IllustrisTNG Lens Modelling/obs_point/obs_point_(POS+FLUX).dat')\\n\",\n",
+       " 'glafic.optimize()\\n',\n",
+       " 'glafic.findimg()\\n',\n",
+       " 'glafic.writecrit(1.0)\\n',\n",
+       " 'glafic.writelens(1.0)\\n',\n",
+       " '\\n',\n",
+       " 'glafic.quit()']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open(model_path + '/' + constraint + '_point' + '.py', 'r') as file:\n",
     "    py = file.readlines()\n",
     "\n",
     "py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "c417906c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line found: glafic.set_lens(1, 'sie', 0.261343256161012, 1.30e+02, 20.81, 20.76, 0.109, 23.18, 0.0, 0.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extracting the input parameters from the Python file\n",
+    "\n",
+    "# Find the line that starts with 'glafic.set_lens('\n",
+    "set_lens_line = None\n",
+    "for line in py:\n",
+    "    if line.startswith('glafic.set_lens('):\n",
+    "        set_lens_line = line\n",
+    "        break\n",
+    "if set_lens_line is None:\n",
+    "    raise ValueError(\"No line starting with 'glafic.set_lens(' found in the file.\")\n",
+    "print(f\"Line found: {set_lens_line.strip()}\")"
    ]
   }
  ],
